frontend/kubernetes/overlays/dev/code-server.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
spec:
 ports:
 - port: 8080
   targetPort: 8080
   name: http
 selector:
   app: code-server
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: coact-dev.slac.stanford.edu
    http:
      paths:
      - path: /code-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: linuxserver/code-server
        name: code-server
        volumeMounts:
        - name: coact-ui-code
          mountPath: /config/workspace/coact-ui/
        - name: coact-api-code
          mountPath: /config/workspace/coact-api/
      volumes:
      - name: coact-ui-code
        persistentVolumeClaim:
          claimName: coact-ui-code
      - name: coact-api-code
        persistentVolumeClaim:
          claimName: coact-api-code
