frontend/kubernetes/overlays/dev/endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: coact-ui
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: coact-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coact-ui
#  annotations:
#    nginx.ingress.kubernetes.io/auth-signin: "https://vouch.slac.stanford.edu/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
#    nginx.ingress.kubernetes.io/auth-url: https://vouch.slac.stanford.edu/validate
#    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Vouch-User, X-Vouch-Idp-Claims-Name, X-Vouch-IdP-AccessToken, X-Vouch-IdP-RefreshToken, X-Vouch-IdP-IdToken, X-Vouch-Token'
#    nginx.ingress.kubernetes.io/auth-snippet: |
#      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_IdToken;
#      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
#      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      proxy_set_header Remote-Name $http_x_vouch_idp_claims_name;
#      proxy_set_header Remote-User $http_x_vouch_idp_claims_name;
spec:
  rules:
  - host: coact-dev.slac.stanford.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coact-ui
            port:
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coact-ui-login
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: "https://vouch.slac.stanford.edu/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
    nginx.ingress.kubernetes.io/auth-url: https://vouch.slac.stanford.edu/validate
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Vouch-User, X-Vouch-Idp-Claims-Name, X-Vouch-IdP-AccessToken, X-Vouch-IdP-RefreshToken, X-Vouch-IdP-IdToken, X-Vouch-Token'
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_IdToken;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Remote-Name $http_x_vouch_idp_claims_name;
      proxy_set_header Remote-User $http_x_vouch_idp_claims_name;
spec:
  rules:
  - host: coact-dev.slac.stanford.edu
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: coact-ui
            port:
              name: http
